# fcsparser

./: .gitignore  .travis.yml  AUTHORS  CHANGE_LOG  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.rst  fabfile.py  pyproject.toml  requirements.dev.txt  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
doc/: fcsparser_example.ipynb
fcs_parser/: fcsreader.py
fcsparser/: __init__.py  _version.py  api.py  version.py
fcsparser/tests/: test_fcs_reader.py
fcsparser/tests/data/FlowCytometers/cyflow_cube_8/: cyflow_cube_8.fcs
fcsparser/tests/data/FlowCytometers/cytek-nl-2000/: sample_header.fcs
fcsparser/tests/data/FlowCytometers/fake_bitmask_error/: fcs1_cleaned.lmd
